# DndDiceRoller

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.txt
cmake/: mingw-toolchain.cmake
inc/: defines.hpp  dice_roller.hpp  enums.hpp  options.hpp  structs.hpp
src/: dice_roller.cpp  options.cpp
